# Secure_crypto_toolkit

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: aes_gcm.cpp.46CD47E106D9C6A0.idx  aes_gcm.hpp.E8B8097F89FE76DD.idx  ecdh.cpp.A25C4AEF92562C5E.idx  ed25519.cpp.6BBFE30B3F4ACA23.idx  hkdf.cpp.6BB289E482676DF4.idx  hkdf.hpp.6F10EAD3C60FBC04.idx  secure_random.cpp.055C1D4E7693882E.idx  secure_random.hpp.FF5C7864D950FB7C.idx  test_aes_gcm.cpp.42307B78DBB4F74D.idx  test_ecdh.cpp.0724AA57F8F563EF.idx  test_ed25519.cpp.96A28FF6C2947CD6.idx  test_hkdf.cpp.5E2B9543F6FFD816.idx  test_secure_random.cpp.0DADAB7A549E5414.idx  utils.cpp.2E825CF5195626E6.idx
benchmarks/: CMakeLists.txt
include/secure_crypto/: aes_gcm.hpp  ecdh.hpp  ed25519.hpp  hkdf.hpp  io.hpp  secure_hash.hpp  secure_random.hpp  utils.hpp
src/: CMakeLists.txt  aes_gcm.cpp  ecdh.cpp  ed25519.cpp  hkdf.cpp  io.cpp  secure_random.cpp  utils.cpp
tests/: CMakeLists.txt  test_aes_gcm.cpp  test_ecdh.cpp  test_ed25519.cpp  test_hkdf.cpp  test_secure_random.cpp  test_utils.cpp
